--- a/index.html
+++ b/index.html
@@ -18,34 +18,20 @@
   </style>
 </head>
 <body>
-  <main class="container d-flex">
-    <div class="card filter-container d-flex"></div>
-      <div class="card featured">
-        <img src="" alt="company icon" class="company-icon">
-        <div class="main-info">
-          <div class="company-wraper">
-            <h2 class="company-name"></h2>
-            <div class="flags-wrapper"></div>
-          </div>
-          <h1 class="job-title"></h1>
-          <div class="job-info-wrapper">
-            <p class="time-since-posted"></p>
-            <p class="employment-length"></p>
-            <p class="location"></p>
-          </div>
-        </div> 
-        <div class="filter-tags">
-          
-        </div> 
+  <section class="container d-flex">
+    <div class="filter-container">
+      <div class="filtered-tags-container"></div>
+      <button class="clear-btn" type="button">Clear</button>
     </div>
-  </main>
+  </section>
+  <section class="card-container container">
 
- 
-
-  <script src="./js/script.js"></script>  
+  </section>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="./js/script.js"></script>  
 </body>
 </html>
