--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <section class="container d-flex">
+  <section class="container">
     <div class="filter-container">
       <div class="filtered-tags-container"></div>
       <button class="clear-btn" type="button">Clear</button>
@@ -30,7 +30,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Paweł Pikus</a>.
   </div>
   <script src="./js/script.js"></script>  
 </body>
