--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Job Listings</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 12px; text-align: center; margin: 2em auto; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -24,13 +23,11 @@
       <button class="clear-btn" type="button">Clear</button>
     </div>
   </section>
-  <section class="card-container container">
-
-  </section>
+  <section class="container card-container"></section>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Paweł Pikus</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/pawelpikus" target="_blank">Paweł Pikus</a>.
   </div>
   <script src="./js/script.js"></script>  
 </body>
